# cibo-online

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs
.sqlx/: query-6445e4784b07766e716927817d180a403449102638397763de188290a924c641.json  query-b02a7a5084ce8ac80ff8357f7f9db2fd7bb164ef4a0c575596ff1f99c0ff1339.json  query-d311ac422db261b36c070334bc8d527fbe62be306938b397758ec4fa60d585f0.json  query-dc64e1d25d9ced3a49130cee99f6edc3f70a4917910cf3b76faefc24ac32159d.json
assets/: beach_ball.aseprite  beach_ball_0.ppm  beach_ball_135.ppm  beach_ball_180.ppm  beach_ball_225.ppm  beach_ball_270.ppm  beach_ball_315.ppm  beach_ball_45.ppm  beach_ball_90.ppm  cibo.aseprite  cibo_back_stand.ppm  cibo_back_walk1.ppm  cibo_back_walk2.ppm  cibo_front_stand.ppm  cibo_front_walk1.ppm  cibo_front_walk2.ppm  cibo_left_stand.ppm  cibo_left_walk1.ppm  cibo_left_walk2.ppm  cibo_right_stand.ppm  cibo_right_walk1.ppm  cibo_right_walk2.ppm  easel.aseprite  easel.ppm  logo.aseprite  logo.ppm  msgboard.aseprite  msgboard.ppm  msgboard_bg.aseprite  msgboard_bg.ppm  paint_tube.aseprite  paint_tube.ppm  paint_tube_mask.pbm  palette.aseprite  palette.ppm  palette_mask.pbm  smudge_brush.ppm  spatula.aseprite  spatula.ppm  tile_flowers.ppm  (+10 more)
cibo_online/: Cargo.toml
cibo_online-web/: Cargo.toml
cibo_online/src/: client.rs  game_state.rs  lib.rs  server.rs  world.rs
cibo_online/src/client/: chat_widget.rs  mod.rs  render.rs  state.rs
cibo_online/src/client/render/: _mod.rs  mod.rs  sprite.rs
cibo_online/src/render/: assets.rs  mod.rs  renderable.rs
cibo_online/src/render/widgets/: chat_widget.rs  mod.rs
cibo_online/src/world/: network_object.rs  object.rs
cibo_online/src/world/objects/: beach_ball.rs  easel.rs  message_board.rs  message_board_text.txt  mod.rs
migrations/: 20240722211952_initial.sql
server/: Cargo.toml
server/src/: admin_panel.rs  db.rs  game_server.rs  main.rs
server/src/admin_panel/: login.rs
server/static/admin/: style.css
src/: admin_panel.rs  db.rs  game_server.rs  main.rs
src/admin_panel/: login.rs
static/admin/: script.js  style.css
web_client/: Cargo.toml
web_client/src/: lib.rs
web_client/static/: index.html
