[package]
name = "cibo_online"
version = "0.2.0"
edition = "2021"

[dependencies]
mixbox = "2.0.0"
monos_gfx = { git = "https://github.com/Fisch03/monOS.git", default-features = false }
postcard = { version = "1.0.8", default-features = false, features = ["alloc"] }
rand = { version = "0.8.5", default-features = false, features = ["alloc", "small_rng"] }
serde = { version = "1.0.203", default-features = false, features = ["derive", "alloc"] }
