[package]
name = "server"
version = "0.2.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", default-features = false, features = ["ws", "form", "http1"] }
tower-http = { version = "0.5", features = ["fs", "compression-gzip", "compression-br", "compression-zstd"] }
tokio = { version = "1", features = ["rt-multi-thread", "parking_lot"] }
futures = { version = "0.3.30", default-features = false, features = ["std"] }
cibo_online = { path = "../cibo_online" }
tracing = { version = "0.1.40", default-features = false, features = ["std"] }
tracing-subscriber = "0.3.18"
sqlx = { version = "0.7.4", default-features = false, features = ["runtime-tokio", "sqlite", "migrate", "macros"] }
argon2 = "0.5.3"
maud = { version = "0.26.0", features = ["axum"] }
serde = "1.0.204"
rand = "0.8.5"
cookie = "0.18.1"
