[package]
name = "web_client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
monos_gfx = { git = "ssh://git@github.com/Fisch03/monOS.git", default-features = false }
cibo_online = { path = "../cibo_online" }
wasm-bindgen = "0.2.92"
js-sys = "0.3.69"
wasm-bindgen-futures = "0.4.42"

[dependencies.web-sys]
version = "0.3.4"
features = [
    "Window",
    "BinaryType",
    "MessageEvent",
    "ErrorEvent",
    "KeyboardEvent",
    "WebSocket",
    "Location"
]
